--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,20 @@
 version: '3.3'
 services:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile.python
+    restart: always
+    depends_on:
+      - db:
+        condition: service_healthy
+    environment:
+      MYSQL_HOST: db
+      MYSQL_PORT: 3306
   db:
     build:
         context: .
-        dockerfile: Dockerfile
+        dockerfile: Dockerfile.mysql
     restart: always
     environment:
       MYSQL_DATABASE: 'OrganizationsDB'
@@ -22,6 +33,7 @@ services:
       # Where our data will be persisted
     volumes:
       - my-db:/var/lib/mysql
-# Names our volume
-volumes:
-  my-db:
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+      timeout: 20s
+      retries: 10
