--- a/Dockerfile.python
+++ b/Dockerfile.python
@@ -1,11 +1,11 @@
-FROM python:3.8
+FROM python:latest
 
-WORKDIR /app
+WORKDIR /usr/app/src
 
-COPY requirements.txt .
+COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY app.py .
-COPY data.csv .
+COPY app.py ./
+COPY data.csv ./
 
 CMD ["python", "app.py"]
