--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,27 +1,18 @@
 version: '3.3'
 services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile.python
-    depends_on:
-        - db
-    environment:
-      MYSQL_HOST: db
-      MYSQL_PORT: 3306
   db:
     build:
         context: .
         dockerfile: Dockerfile.mysql
     restart: always
     environment:
-      MYSQL_DATABASE: 'OrganizationsDB'
+      MYSQL_DATABASE: OrganizationsDB
       # So you don't have to use root, but you can if you like
-      MYSQL_USER: 'panta'
+      MYSQL_USER: panta
       # You can use whatever password you like
-      MYSQL_PASSWORD: '1234'
+      MYSQL_PASSWORD: 1234
       # Password for root access
-      MYSQL_ROOT_PASSWORD: '1234'
+      MYSQL_ROOT_PASSWORD: 1234
     ports:
       # <Port exposed> : < MySQL Port running inside container>
       - '3306:3306'
